# GPT-persona-classifier-py

./: .gitignore  .markdownlint.yaml  CONTRIBUTING.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: pull_request_template.md
aiven_persona_classifier/: jobtitle_persona_enrichment_vertex.py
